# rust-ffmpeg

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: build.yml
example/: Cargo.toml
example/assets/: test.yuv
example/src/: ffmpeg_input.rs  main.rs
examples/: chapters.rs  codec-info.rs  dump-frames.rs  metadata.rs  remux.rs  transcode-audio.rs  transcode-x264.rs
src/: constants.rs  lib.rs
src/codec/: audio.rs  audio_service.rs  capabilities.rs  codec.rs  compliance.rs  context.rs  debug.rs  discard.rs  field_order.rs  flag.rs  id.rs  mod.rs  parameters.rs  picture.rs  profile.rs  threading.rs  traits.rs  types.rs  video.rs
src/codec/decoder/: audio.rs  check.rs  conceal.rs  decoder.rs  mod.rs  opened.rs  slice.rs  subtitle.rs  video.rs
src/codec/encoder/: audio.rs  comparison.rs  decision.rs  encoder.rs  mod.rs  motion_estimation.rs  prediction.rs  subtitle.rs  video.rs
src/codec/packet/: borrow.rs  flag.rs  mod.rs  packet.rs  side_data.rs  traits.rs
src/codec/subtitle/: flag.rs  mod.rs  rect.rs  rect_mut.rs
src/device/: extensions.rs  input.rs  mod.rs  output.rs  types.rs
src/filter/: filter.rs  flag.rs  graph.rs  mod.rs  pad.rs  types.rs
src/filter/context/: context.rs  mod.rs  sink.rs  source.rs
src/format/: generated.rs  mod.rs  network.rs  types.rs
src/format/chapter/: chapter.rs  chapter_mut.rs  mod.rs
src/format/context/: common.rs  destructor.rs  input.rs  mod.rs  output.rs
src/format/format/: flag.rs  input.rs  iter.rs  mod.rs  output.rs
src/format/stream/: disposition.rs  mod.rs  stream.rs  stream_mut.rs
src/software/: mod.rs
src/software/resampling/: context.rs  delay.rs  dither.rs  engine.rs  extensions.rs  filter.rs  flag.rs  mod.rs  types.rs
src/software/scaling/: color_space.rs  context.rs  extensions.rs  filter.rs  flag.rs  mod.rs  support.rs  types.rs  vector.rs
src/util/: channel_layout.rs  error.rs  generated.rs  media.rs  mod.rs  picture.rs  rational.rs  time.rs  types.rs
src/util/chroma/: location.rs  mod.rs
src/util/color/: mod.rs  primaries.rs  range.rs  space.rs  (+1 more)
tests/: avcodec.rs  avfilter.rs  avformat.rs  avutil.rs  swresample.rs  swscaling.rs  utils.rs
witc/: wasmedge_ffmpeg_avcodec.wit  wasmedge_ffmpeg_avdevice.wit  wasmedge_ffmpeg_avfilter.wit  wasmedge_ffmpeg_avformat.wit  wasmedge_ffmpeg_avutil.wit  wasmedge_ffmpeg_swresample.wit  wasmedge_ffmpeg_swscale.wit
(+21 files in other folders)
