[package]
name    = "ffmpeg-next"
version = "6.0.0"
build   = "build.rs"

authors = ["meh. <meh@schizofreni.co>", "Zhiming Wang <i@zhimingwang.org>"]
license = "WTFPL"

description   = "Safe FFmpeg wrapper (FFmpeg 4 compatible fork of the ffmpeg crate)"
documentation = "https://docs.rs/ffmpeg-next"
homepage      = "https://github.com/zmwangx/rust-ffmpeg#readme"
repository    = "https://github.com/zmwangx/rust-ffmpeg"
readme        = "README.md"
keywords      = ["ffmpeg", "multimedia", "video", "audio"]
categories    = ["multimedia"]

#[features]
#default = ["codec", "device", "filter", "format", "software-resampling", "software-scaling"]

# ffmpeg<xy> are obsolete features kept for backward compatibility purposes and
# don't do anything anymore (equivalents are automatically specified through
# compile-time detection in ffmpeg-sys-next). Deprecation plan: all these
# features will be removed come 5.0.
ffmpeg43 = []
ffmpeg42 = []
ffmpeg41 = []
ffmpeg4 = []

# platforms
rpi = []

[dependencies]
libc     = "0.2"
bitflags = "1.2"

[dependencies.image]
version  = "0.23"
optional = true