[package]
name = "ffmpeg-next"
version = "6.0.0"
build = "build.rs"
authors = ["hrushikesh20thegreat@gmail.com","meh. <meh@schizofreni.co>", "Zhiming Wang <i@zhimingwang.org>"]
license = "WTFPL"
description = "Safe FFmpeg wrapper for Wasm application using WasmEdge Runtime"
documentation = "https://docs.rs/wasmedge-ffmpeg-sdk"
homepage = "https://github.com/hrushi20/rust-ffmpeg#readme"
repository = "https://github.com/Hrushi20/rust-ffmpeg"
readme = "README.md"
keywords = ["ffmpeg","Webassembly","wasmedge", "video", "audio"]
categories = ["Webassembly"]
publish = true

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-wasi"
targets = ["wasm32-wasi"]
include = [
    "LICENSE",
    "README.md",
    "Cargo.toml",
    "/src",
    "/witc"
]

[features]
default = ["codec", "device", "filter", "format", "software-resampling", "software-scaling","ffmpeg_6_0"]
codec = []
device = ["format"]
filter = []
format = ["codec"]
resampling = []
postprocessing = []
software-resampling = []
software-scaling = ["codec"]
ffmpeg_6_0 = []

[build-dependencies]
os_info = { version = "3.7.0", default-features = false }
powershell_script = "1.1.0"

[dependencies]
bitflags = "1.2"

[dependencies.image]
version = "0.23"
optional = true
